--- a/Firmness.WebAdmin/Firmness.WebAdmin.csproj
+++ b/Firmness.WebAdmin/Firmness.WebAdmin.csproj
@@ -14,6 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="15.1.0" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
       <PackageReference Include="DotNetEnv" Version="3.1.1" />
       <PackageReference Include="EPPlus" Version="8.2.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
