--- a/Firmness.WebAdmin/appsettings.json
+++ b/Firmness.WebAdmin/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=mainline.proxy.rlwy.net;Port=12358;Database=railway;Username=postgres;Password=dsxkZNHyryWphybiFMauuHKQxZLqdDuo;Ssl Mode=Require;Trust Server Certificate=True"
+    "DefaultConnection": "Host=bri30qnelugmsdgm1zzi-postgresql.services.clever-cloud.com;Port=50013;Database=bri30qnelugmsdgm1zzi;Username=ufuxa3dn5n77udngrn2i;Password=xGXOYCeJGYOqvB24zxno8rOPFxqyGs;Ssl Mode=Require;Trust Server Certificate=True"
 
   },
 
